# -Review-Agent

./: README.md  README_AI_ENHANCED.md  config.example.yaml  config.yaml  enhanced_config.yaml  pyproject.toml  requirements.txt  setup.py  test_config.yaml  test_demo.py  test_enhanced_analysis.py  test_enhanced_config.yaml  test_github_auth.py  test_project.py
.github/workflows/: ci.yml
scripts/: mock_run.py
src/pr_review_agent/: __init__.py  ai_engine.py  async_webui.py  cli.py  config.py  main.py  webui.py
src/pr_review_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pr_review_agent/analyzers/: base.py  security_analyzer.py  structure_analyzer.py
src/pr_review_agent/providers/: __init__.py  base.py  bitbucket.py  github.py  gitlab.py  mock.py
src/pr_review_agent/templates/: index.html  result.html
tests/: test_async_webui.py  test_integration_mock_provider.py  test_webui.py
